# Trading-Intelligence-Platform

./: .env.example  .gitignore  CHANGELOG.md  CODEX_PROMPT.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  reset-local.bat  reset-local.ps1  reset-local.sh  start-local.bat  start-local.ps1  start-local.sh  stop-local.bat  stop-local.ps1  stop-local.sh
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: config.py  database.py  logging_config.py  main.py
apps/api/app/api/: ai_usage.py  audit.py  chat.py  config.py  crypto_session.py  health.py  memory.py  news.py  notifications.py  outcomes.py  pipeline.py  polymarket.py  risk.py  rumours.py  settings.py  signals.py  social.py  stream.py  system.py  trading.py
apps/api/app/migrations/: alembic.ini  env.py
apps/api/app/models/: __init__.py  ai_agents.py  assets.py  audit.py  candles.py  memory.py  narratives.py  news.py  notifications.py  orders.py  outcomes.py  polymarket.py  positions.py  risk.py  rules.py  rumours.py  settings.py  signals.py  social.py  sources.py  strategies.py  token_usage.py  trades.py
apps/api/app/schemas/: common.py  orders.py  risk.py
apps/api/app/services/: active_rule_engine.py  ai_guard.py  alpaca_broker.py  audit.py  auto_trader.py  chat_service.py  config_service.py  crypto_session.py  market_context.py  market_data_service.py  market_session.py  news_analyzer.py  notifications.py  order_recorder.py  (+15 more)
apps/api/scripts/: reset_trading_data.py
apps/api/tests/: test_ai_guard.py  test_outcome_engine.py  test_risk_engine.py
(+82 files in other folders)
