[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trading-os-api"
version = "1.0.0"
description = "Trading Intelligence Platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "psycopg[binary,pool]>=3.2.0",
    "redis>=5.1.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "openai>=1.51.0",
    "feedparser>=6.0.11",
    "praw>=7.8.1",
    "qdrant-client>=1.11.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "aiohttp>=3.10.0",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
